Fix generation outside of grid, add gap slider

--- a/euler-golf/css/styles.css
+++ b/euler-golf/css/styles.css
@@ -72,3 +72,10 @@ button {
   display: flex;
   justify-content: center;
 }
+
+.slider {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 3px;
+}
